--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/mustache": "^0.8.32",
         "@types/node": "^12.0.2",
         "@types/request": "^2.48.1",
+        "body-parser": "^1.20.2",
         "axios": "1.6.8",
         "express": "^4.16.4",
         "js-yaml": "^3.13.1",
